tests/snapshots/run_wpt_conformance__litert_clamp_float16_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp float16 1D tensor, litert
 clamp :: clamp float16 1D tensor: index 0: actual=0 expected=-2 ulp=16384 tolerance=4
  inputs: clampInput: [-64000, 64000, -2, 1, 0]
  expected clampOutput: [-2, 64000, -2, 1, 0]
  actual clampOutput: [0, 64000, 0, 1, 0]
  expected clampOutput full nd:
(shape [5])
[-2, 64000, -2, 1, 0]
  actual clampOutput full nd:
(shape [5])
[0, 64000, 0, 1, 0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    clampInput: f16[5];
  }

  nodes {
    [clampOutput] = clamp(clampInput, label="", maxValue=null, minValue=-2);
  }

  outputs { clampOutput; }
}
